[gd_scene load_steps=3 format=3 uid="uid://fj5b1nu3x4fi"]

[ext_resource type="Script" path="res://src/scripts/ui/PauseMenuUI.gd" id="1_3b4c5"]
[ext_resource type="Theme" path="res://src/ui/themes/MenuTheme.tres" id="2_4d5e6"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_4d5e6")
script = ExtResource("1_3b4c5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "RESUME"
flat = true

[node name="RestartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "RESTART"
flat = true

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "MAIN MENU"
flat = true
